# ObjectTrackingSurveillance

./: .gitignore  CMakeLists.txt  README.md
include/: Detector.hpp  Tracker.hpp
src/: Detector.cpp  Tracker.cpp  main.cpp
